# similarpanda

./: .gitignore  LICENSE  README.md  output_differences.xlsx  pyproject.toml  requirements.txt  similarpanda interface.ipynb  similarpanda.py
example data/: example-data-new.xlsx
input/: example-data-old.xlsx
output/: example_output_differences.xlsx
